Fix potential NPEs and resource leak